Edit code for s81

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
     <!--  -->
 	<div class="container mt-4" id = "featured">
         <h2 class="text-center mb-4 text-fatface">Featured Courses</h2>
-        <div class="row">
+        <div class="row" id = "resources">
             <!-- First Card -->
             <div class="col-md-6 mb-4"> <!-- Adjusted to col-md-6 to take half of the container width -->
                 <div class="card">
@@ -91,10 +91,10 @@
         </div>
     </div>
 
-	<div id="categories" class="categories-section">
+	<div id="categories-section">
         <h1 class="text-center mb-5 text-fatface">Categories</h1>
         <div class="container">
-            <div class="row">
+            <div class="row" id = "categories">
                 <div class="col-lg-12 mx-auto" id = "categories">
                     <ul class="list-group">
                         
